<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#F0FFFF"
            android:orientation="vertical"
            android:textColor="#000000">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textColor="#000000"
                />

            <EditText
                android:id="@+id/number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:phoneNumber="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count"
                android:textColor="#000000"
                />

            <EditText
                android:id="@+id/count"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:phoneNumber="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gap_time"
                android:textColor="#080808"
                />

            <EditText
                android:id="@+id/gap_time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:phoneNumber="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call_time"
                android:textColor="#000000"
                />

            <EditText
                android:id="@+id/call_time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:phoneNumber="true"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="是否自动接听"
                android:textColor="#000"
                android:textSize="20sp"/>

            <CheckBox
                android:id="@+id/isAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"/>


        </LinearLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="目前仅支持单个SIM卡（双卡手机只能装一张SIM卡）"
            android:textColor="#000000"/>

        !Spinner
        android:id="@+id/spinner1"
        /android:layout_width="match_parent"
        android:layout_height="wrap_content"


        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/start"/>

            <Button
                android:id="@+id/end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/end"/>
        </LinearLayout>

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"/>


    </LinearLayout>
</ScrollView>
